# EcommerceFastAPI

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 069c13fff23a_create_app_schema.py  097e5e18f37d_initialize_schema.py  2327d542ca5e_fix_user_relationship_with_address.py  4702beca2790_change_user_address_to_be_one_to_many.py  72a124f318e8_add_updated_at_column_to_categories.py  87bf893a38bb_create_users_table.py  8cf3ca922790_add_updated_at_column_to_categories.py  906a0b95064f_create_users_table.py  9fa227c5bde8_add_intermediate_table_to_coupons.py  a4ea230540e1_add_user_id_to_cart_item.py  a6280d23342d_add_intermediate_table_to_coupons.py  f6bc197c84dc_create_app_schema.py  fe17a55e4e29_delete_address_on_cascade.py
app/: main.py
app/configs/: logger.py  logging_middleware.py
app/db/: __init__.py  session.py
app/models/: __init__.py  address.py  cart.py  cart_item.py  category.py  coupon.py  order.py  order_coupons.py  order_item.py  payment.py  product.py  review.py  shipment.py  user.py
app/repository/: address.py  cart.py  cart_item.py  category.py  product.py  review.py  user.py
app/routes/v1/: auth.py  (+5 more)
app/schema/: address.py  cart.py  cart_item.py  category.py  order.py  order_item.py  payment.py  product.py  review.py  shipment.py  user.py
app/security/: security.py
app/services/: cart.py  cart_item.py  category.py  product.py  review.py  user.py
tests/: conftest.py  models_factory.py
tests/models/: test_address.py  test_cart.py  test_cart_item.py  test_category.py  test_order.py  test_order_item.py  test_payment.py  test_product.py  test_review.py  test_shipment.py  test_user.py
(+13 files in other folders)
