[project]
name = "ecommerceapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "factory-boy>=3.3.3",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.4",
    "pytest-sqlalchemy>=0.3.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.9",
    "taskipy>=1.14.1",
]

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["I", "F", "E", "W", "PL", "PT"]
ignore = []

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.taskipy.tasks]
test = 'pytest --cov=ecommerceapi -vv'
